center cover works now

--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,11 @@
 
 <div id="top" class="doublepage">
     <div id="cover" class="leftpage">
-      <div id="cover-photo"></div>
+      <div id="cover-w"></div>
       <div id="cover-title">维基日刊</div>
-      <div id="cover-top"><ul></ul></div>
-      <div id="cover-left"><ul></ul></div>
-      <div id="cover-right"><ul></ul></div>
+      <div id="cover-x"><ul></ul></div>
+      <div id="cover-y"><ul></ul></div>
+      <div id="cover-z"><ul></ul></div>
     </div>
     <div id="tocpage" class="rightpage">
       <div class="head-right">新闻</div>
